--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: ./backend
     container_name: fastapi_app
     ports:
-      - "8000:8000"
+      - "3001:3001"
     environment:
       - DATABASE_URL=postgresql+asyncpg://postgres:123456@db:5432/expomusic_db
     depends_on:
@@ -26,24 +26,21 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d base_db"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d expomusic_db"]
       interval: 10s
       timeout: 5s
       retries: 5
   
 
-  frontend:
-    build: ./frontend
-    container_name: vue_app
-    ports:
-      - "5500:5500"  # !!! ВНИМАНИЕ: Порт может измениться
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules  # Избегаем перезаписи node_modules
-    environment:
-      - NODE_ENV=development
-    depends_on:
-      - web  # Зависит от сервера (FastAPI)
+  # frontend:
+  #   build: ./frontend
+  #   container_name: frontend
+  #   ports:
+  #     - "5500:5500"  # !!! ВНИМАНИЕ: Порт может измениться
+  #   volumes:
+  #     - ./frontend:/app
+  #   depends_on:
+  #     - web  # Зависит от сервера (FastAPI)
 
 volumes:
   postgres_data:
