--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
-version: '3.9'
-
 services:
   web:
     build: ./backend
-    container_name: fastapi_app
+    container_name: backend
     ports:
       - "3001:3001"
     environment:
       - DATABASE_URL=postgresql+asyncpg://postgres:123456@db:5432/expomusic_db
+      #- DATABASE_URL=$""
     depends_on:
       db:
         condition: service_healthy
